# Devnco_Assignment

./: .gitignore  README.md
backend/: Dockerfile  RAG_DEVNCO.pem  README.md  config.py  migrate_existing_files.py  pyproject.toml  requirments.txt  start_server.py
backend/src/: main.py
backend/src/routers/: auth.py  database.py  files.py  health.py  qa.py
backend/src/schemas/: file_upload.py  question_and_answer.py
backend/src/services/: ingestion.py  progress_tracker.py  retriever.py  storage.py
backend/src/utils/: logger.py
backend/storage/chromadb/: chroma.sqlite3
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: ChatInterface.js  FileList.js  PDFViewer.js  ProgressIndicator.js  SidebarProgressIndicator.js
frontend/src/services/: api.js
