[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "pandas>=2.3.2",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
