[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "from-root>=1.3.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "pandas>=2.3.2",
    "pydantic>=2.5.0",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.24.0",
    "unstructured>=0.10.0",
    "docx2txt>=0.8",
    "chromadb>=1.0.20",
    "langchain-openai>=0.3.31",
    "sentence-transformers>=5.1.0",
    "langchain-huggingface>=0.3.1",
]
